--- a/formData.html
+++ b/formData.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <form action="http://localhost:5000/api/contacts" method="POST">
+    <form action="loaf202368243.azurewebsites.net" method="POST">
         <input type="text" placeholder="Firstname" name="FirstName" required> <br>
         <input type="text" placeholder="Lastname" name="LastName" required><br>
         <input type="email" placeholder="Email" name="Email" required><br>
